--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
   </head>
   <body>
     <!-- Main Header -->
-    <header></header>
+    <header>
+      <div></div>
+      <nav>
+        <a href=""></a>
+        <a href=""></a>
+        <a href=""></a>
+        <a href=""></a>
+      </nav>
+    </header>
 
     <!-- Main Content -->
     <main></main>
