--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <!-- Meta Data -->
     <meta charset="UTF-8" />
-    <!-- For responsive purpose -->
+    <!-- responsive  -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Portfolio</title>
 
@@ -17,7 +17,7 @@
       <!-- Logo Website -->
       <div class="main-logo"></div>
 
-      <!-- Navigation -->
+      <!-- Navigasi -->
       <nav>
         <a href="#home">Home</a>
         <a href="#our-profile">Our Profile</a>
@@ -33,14 +33,20 @@
       <!-- Home Content -->
       <section id="home">
         <header>
-          <h1>Hi User, Welcome to my Portfolio</h1>
-          <p>Here you can see my profile, achievement, and message me</p>
+          <h1>Hi <span id="user-name">User</span>, Welcome to our school website</h1>
+          <p>Here you can see our profile, achievement, and message me</p>
+          <div class="name-input-container">
+            <input type="text" id="name-input-home" placeholder="Enter your name" />
+            <button onclick="updateUserName()">Update</button>
+          </div>
         </header>
 
         <!-- Banner Autoslide -->
-        <div class="banner-img banner-1"></div>
-        <div class="banner-img banner-2"></div>
-        <div class="banner-img banner-3"></div>
+        <div class="banner-container">
+          <div class="banner-img banner-1"></div>
+          <div class="banner-img banner-2"></div>
+          <div class="banner-img banner-3"></div>
+        </div>
       </section>
 
       <hr />
@@ -53,9 +59,39 @@
 
         <!-- Our Profile Content -->
         <div class="our-profile-content">
-          <p>Lorem Ipsum Dolor Sit Amet Adipiscing...</p>
+          <div class="profile-banner"></div>
+
+          <div class="school-info">
+            <h2>About Our School</h2>
+            <p>
+              Selamat datang di Bright Future Academy, sebuah institusi yang berkomitmen pada keunggulan akademik, pembentukan karakter, dan pendidikan holistik sejak tahun 1998. Kampus kami seluas 20 hektar menyediakan lingkungan belajar
+              yang kondusif dengan ruang kelas modern, laboratorium sains dan komputer yang lengkap, perpustakaan dengan lebih dari 60.000 buku, serta fasilitas olahraga yang luas. Di Bright Future Academy, kami menerapkan pendekatan
+              pembelajaran yang berpusat pada siswa, mengintegrasikan pengetahuan akademik dengan keterampilan dunia nyata. Dengan dukungan tenaga pengajar yang berdedikasi dan program bimbingan yang kuat, kami memastikan bahwa siswa siap
+              untuk melanjutkan pendidikan tinggi dan meraih kesuksesan dalam karier mereka. Alumni kami telah berkiprah di berbagai bidang seperti kedokteran, teknik, bisnis, dan seni.
+            </p>
+          </div>
+
+          <div class="vision-mission">
+            <div class="vision">
+              <h2>Vision</h2>
+              <p>Menjadi lembaga pendidikan terkemuka yang menginspirasi dan memberdayakan siswa untuk unggul secara akademik, berpikir kritis, dan berkontribusi positif bagi masyarakat.</p>
+            </div>
+
+            <div class="mission">
+              <h2>Mission</h2>
+              <ul>
+                <li>Menyediakan pendidikan berkualitas tinggi yang holistik untuk menumbuhkan rasa ingin tahu intelektual dan semangat belajar sepanjang hayat.</li>
+                <li>Mendorong kreativitas, kepemimpinan, dan nilai-nilai etika dalam setiap siswa.</li>
+                <li>Menciptakan lingkungan belajar yang aman dan inklusif di mana keberagaman dihargai.</li>
+                <li>Mengembangkan inovasi teknologi dan pembelajaran berbasis praktik melalui metode pengajaran modern.</li>
+                <li>Membangun kemitraan yang kuat dengan orang tua, komunitas, dan industri untuk mendukung aspirasi karier siswa.</li>
+              </ul>
+            </div>
+          </div>
         </div>
       </section>
+
+      <hr />
 
       <!-- Achievement Content -->
       <section id="achievement">
@@ -65,9 +101,36 @@
 
         <!-- achievement Content -->
         <div class="achievement-content">
-          <p>Lorem Ipsum Dolor Sit Amet Adipiscing...</p>
+          <div class="achievement-gallery">
+            <div class="achievement-item">
+              <div class="achievement-image" id="achievement1"></div>
+              <div class="achievement-caption">
+                <h3>Best Technology Project 2024</h3>
+              </div>
+            </div>
+            <div class="achievement-item">
+              <div class="achievement-image" id="achievement2"></div>
+              <div class="achievement-caption">
+                <h3>Excellence in Web Development</h3>
+              </div>
+            </div>
+            <div class="achievement-item">
+              <div class="achievement-image" id="achievement3"></div>
+              <div class="achievement-caption">
+                <h3>Programming Champion</h3>
+              </div>
+            </div>
+            <div class="achievement-item">
+              <div class="achievement-image" id="achievement4"></div>
+              <div class="achievement-caption">
+                <h3>Innovation Award</h3>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
+
+      <hr />
 
       <!-- Message Us Content -->
       <section id="message-us">
@@ -77,19 +140,40 @@
 
         <!-- Message Us Content -->
         <div class="message-us-content">
-          <form action="">
-            <label for="name-input">Name:</label>
-            <input type="text" id="name-input" name="name" placeholder="Your Name" required />
+          <form id="message-form">
+            <div class="form-group">
+              <label for="form-name">Name:</label>
+              <input type="text" id="form-name" name="name" placeholder="Your Name" required />
+            </div>
+
+            <div class="form-group">
+              <label for="form-email">Email:</label>
+              <input type="email" id="form-email" name="email" placeholder="Your Email" required />
+            </div>
+
+            <div class="form-group">
+              <label for="form-subject">Subject:</label>
+              <input type="text" id="form-subject" name="subject" placeholder="Message Subject" required />
+            </div>
+
+            <div class="form-group">
+              <label for="form-message">Message:</label>
+              <textarea id="form-message" name="message" placeholder="Your Message" rows="5" required></textarea>
+            </div>
 
             <button type="button" onclick="validateForm()">Submit</button>
           </form>
+
+          <div id="form-result" class="form-result">
+            <!-- Form submission -->
+          </div>
         </div>
       </section>
     </main>
 
-    <!-- Main Footer -->
+    <!-- Footer -->
     <footer>
-      <p>&copy; 2021 Portfolio Yama</p>
+      <p>&copy; 2025 Portfolio Website - Agung Riadi Marlis <i>(Semua gambar diambil dari Google)</i></p>
     </footer>
 
     <!-- JavaScript -->
